--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,8 @@ $catalogo-theme: mat-light-theme((
 @include angular-material-theme($catalogo-theme);
 
 /* You can add global styles to this file, and also import other style files */
-
+:root {
+  --categoria-div-width: 200px;
+}
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
