--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -2,28 +2,30 @@
   flex: 1 1 auto;
 }
 
-mat-form-field.mat-form-field {
+/* mat-form-field.mat-form-field {
   font-size: 10px;
   width: 500px;
 }
 
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(var(--toolbar-text-color), 0.5);
+  color: rgba;
 }
 
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-thick {
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(var(--toolbar-text-color), 0.87);
 }
 
 ::ng-deep
   .mat-form-field-appearance-outline.mat-focused
   .mat-form-field-outline-thick {
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(var(--toolbar-text-color), 0.87);
 }
 
 input::-webkit-input-placeholder,
      textarea::-webkit-input-placeholder {
-     color: #ccc;
+     color: rgb(var(--toolbar-text-color));
      text-shadow: none;
      -webkit-text-fill-color: initial;
 }
+ */
