--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,7 +35,14 @@ $catalogo-theme: mat-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 :root {
-  --categoria-div-width: 200px;
+  --categoria-div-width: 300px;
+  --footer-div-height: 100px;
+  --toolbar-text-color: 255,255,255;
+  --producto-div-width: 279px;
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+a {
+  text-decoration: none;
+  color: rgb(var(--toolbar-text-color));
+}
