--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,48 +1,200 @@
-<div style="width: 100%;" fxLayout="row" >
-  <app-categoria></app-categoria>
-  <div fxFlex="1 1 auto">
-    <app-filtrar ></app-filtrar>
-    <div>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
-      <p>hola para buscar Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, tenetur recusandae qui dicta fugit officiis autem labore eaque velit corporis voluptatibus nihil, repellat eligendi quos unde, rem nulla at molestiae.</p>
+<div style="width: 100%" fxLayout="row" fxLayoutAlign="center">
+  <div style="width: 1500px" fxLayout="row" fxLayoutGap="24px">
+    <app-categoria></app-categoria>
+    <div fxFlex="1 1 auto">
+      <app-filtrar></app-filtrar>
+      <mat-grid-list cols="4" rowHeight="500px" gutterSize="20px">
+        <mat-grid-tile>
+          <div style="width: 100%;">
+            <mat-grid-list cols="1" rowHeight="1:1" gutterSize="0px">
+              <mat-grid-tile rowspan="1">
+                <img
+                src="https://icdn7.digitaltrends.com/image/digitaltrends_es/huawei-p30-pro-review-6v2-720x480.jpg"
+                alt=""
+                width="100%"
+                height="auto"
+              />
+              </mat-grid-tile>
+            </mat-grid-list>
+            <mat-grid-list cols="1" rowHeight="5:3" gutterSize="0px">
+              <mat-grid-tile>
+                <p style="text-align: center;">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam ipsam corrupti, incidunt delectus in perspiciatis ab modi fuga soluta vel iure dolorem ducimus voluptatum. Dolorum libero saepe nulla cum ex!
+                </p>
+              </mat-grid-tile>
+            </mat-grid-list>
+            <mat-grid-list cols="1" rowHeight="53px" gutterSize="0px">
+              <mat-grid-tile style="background-color: pink;">583.22 pesos</mat-grid-tile>
+            </mat-grid-list>
+          </div>
+        </mat-grid-tile>
+        <mat-grid-tile>
+          <div style="width: 100%;">
+            <mat-grid-list cols="1" rowHeight="1:1" gutterSize="0px">
+              <mat-grid-tile rowspan="1">
+                <img
+                src="https://mx.celulares.com/fotos/huawei-p40-lite-86112-g-alt.jpg"
+                alt=""
+                height="100%"
+              />
+              </mat-grid-tile>
+            </mat-grid-list>
+            <mat-grid-list cols="1" rowHeight="5:3" gutterSize="0px">
+              <mat-grid-tile>
+                <p style="text-align: center;">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam ipsam corrupti
+                </p>
+              </mat-grid-tile>
+            </mat-grid-list>
+            <mat-grid-list cols="1" rowHeight="53px" gutterSize="0px">
+              <mat-grid-tile style="background-color: pink;">583.22 pesos</mat-grid-tile>
+            </mat-grid-list>
+          </div>
+        </mat-grid-tile>
+        <mat-grid-tile>
+          <div style="width: 100%;">
+            <mat-grid-list cols="1" rowHeight="1:1" gutterSize="0px">
+              <mat-grid-tile rowspan="1">
+                <img
+                src="https://resources.claroshop.com/medios-plazavip/mkt/5ca3e10cc1dd9_p30lite-azul-front-800x800-72-dpijpg.jpg"
+                alt=""
+                width="100%"
+                height="auto"
+              />
+              </mat-grid-tile>
+            </mat-grid-list>
+            <mat-grid-list cols="1" rowHeight="5:3" gutterSize="0px">
+              <mat-grid-tile>
+                <p style="text-align: center;">
+                  Lorem ipsum dolor
+                </p>
+              </mat-grid-tile>
+            </mat-grid-list>
+            <mat-grid-list cols="1" rowHeight="53px" gutterSize="0px">
+              <mat-grid-tile style="background-color: pink;">583.22 pesos</mat-grid-tile>
+            </mat-grid-list>
+          </div>
+        </mat-grid-tile>
+        <mat-grid-tile>
+          <div style="width: 100%;">
+            <mat-grid-list cols="1" rowHeight="1:1" gutterSize="0px">
+              <mat-grid-tile rowspan="1">
+                <img
+                src="https://resources.claroshop.com/medios-plazavip/mkt/5ca3e10cc1dd9_p30lite-azul-front-800x800-72-dpijpg.jpg"
+                alt=""
+                width="100%"
+                height="auto"
+              />
+              </mat-grid-tile>
+            </mat-grid-list>
+            <mat-grid-list cols="1" rowHeight="5:3" gutterSize="0px">
+              <mat-grid-tile>
+                <p style="text-align: center;">
+                  Lorem ipsum dolor
+                </p>
+              </mat-grid-tile>
+            </mat-grid-list>
+            <mat-grid-list cols="1" rowHeight="53px" gutterSize="0px">
+              <mat-grid-tile style="background-color: pink;">583.22 pesos</mat-grid-tile>
+            </mat-grid-list>
+          </div>
+        </mat-grid-tile>
+        <mat-grid-tile>
+          <div style="width: 100%;">
+            <mat-grid-list cols="1" rowHeight="1:1" gutterSize="0px">
+              <mat-grid-tile rowspan="1">
+                <img
+                src="https://resources.claroshop.com/medios-plazavip/mkt/5ca3e10cc1dd9_p30lite-azul-front-800x800-72-dpijpg.jpg"
+                alt=""
+                width="100%"
+                height="auto"
+              />
+              </mat-grid-tile>
+            </mat-grid-list>
+            <mat-grid-list cols="1" rowHeight="5:3" gutterSize="0px">
+              <mat-grid-tile>
+                <p style="text-align: center;">
+                  Lorem ipsum dolor
+                </p>
+              </mat-grid-tile>
+            </mat-grid-list>
+            <mat-grid-list cols="1" rowHeight="53px" gutterSize="0px">
+              <mat-grid-tile style="background-color: pink;">583.22 pesos</mat-grid-tile>
+            </mat-grid-list>
+          </div>
+        </mat-grid-tile>
+        <mat-grid-tile>
+          <div style="width: 100%;">
+            <mat-grid-list cols="1" rowHeight="1:1" gutterSize="0px">
+              <mat-grid-tile rowspan="1">
+                <img
+                src="https://cdn.shopify.com/s/files/1/1040/3796/products/funda-para-celular-plants-funda-personalizada-iphone-accesorios-para-celulares_grande.jpg?v=1582322063"
+                alt=""
+                height="100%"
+              />
+              </mat-grid-tile>
+            </mat-grid-list>
+            <mat-grid-list cols="1" rowHeight="5:3" gutterSize="0px">
+              <mat-grid-tile>
+                <p style="text-align: center;">
+                  Lorem ipsum dolor
+                </p>
+              </mat-grid-tile>
+            </mat-grid-list>
+            <mat-grid-list cols="1" rowHeight="53px" gutterSize="0px">
+              <mat-grid-tile style="background-color: pink;">583.22 pesos</mat-grid-tile>
+            </mat-grid-list>
+          </div>
+        </mat-grid-tile>
+        <mat-grid-tile>
+          <div style="width: 100%;">
+            <mat-grid-list cols="1" rowHeight="1:1" gutterSize="0px">
+              <mat-grid-tile rowspan="1">
+                <img
+                src="https://mobomx.vteximg.com.br/arquivos/ids/167673-600-600/telefono-celular-huawei-nova-5t-8-128-azul-portada-01.jpg?v=637158383165570000"
+                alt=""
+                width="100%"
+                height="auto"
+              />
+              </mat-grid-tile>
+            </mat-grid-list>
+            <mat-grid-list cols="1" rowHeight="5:3" gutterSize="0px">
+              <mat-grid-tile>
+                <p style="text-align: center;">
+                  Lorem ipsum dolor
+                </p>
+              </mat-grid-tile>
+            </mat-grid-list>
+            <mat-grid-list cols="1" rowHeight="53px" gutterSize="0px">
+              <mat-grid-tile style="background-color: pink;">583.22 pesos</mat-grid-tile>
+            </mat-grid-list>
+          </div>
+        </mat-grid-tile>
+        <!-- <mat-grid-tile>
+          <div style="width: 100%;">
+            <mat-grid-list cols="1" rowHeight="1:1" gutterSize="0px">
+              <mat-grid-tile rowspan="1">
+                <img
+                src="https://resources.claroshop.com/medios-plazavip/mkt/5ca3e10cc1dd9_p30lite-azul-front-800x800-72-dpijpg.jpg"
+                alt=""
+                width="100%"
+                height="auto"
+              />
+              </mat-grid-tile>
+            </mat-grid-list>
+            <mat-grid-list cols="1" rowHeight="5:3" gutterSize="0px">
+              <mat-grid-tile>
+                <p style="text-align: center;">
+                  Lorem ipsum dolor
+                </p>
+              </mat-grid-tile>
+            </mat-grid-list>
+            <mat-grid-list cols="1" rowHeight="53px" gutterSize="0px">
+              <mat-grid-tile style="background-color: pink;">583.22 pesos</mat-grid-tile>
+            </mat-grid-list>
+          </div>
+        </mat-grid-tile> -->
+      </mat-grid-list>
     </div>
   </div>
-
 </div>
