--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <div style="width: 100%;min-height: calc(100vh - 54px - var(--footer-div-height));" fxLayout="row" fxLayoutAlign="center center">
   <div style="width: 448px;border-radius: 15px;" class="mat-elevation-z1">
-    <form style="height: 500px;padding: 48px;" fxLayout="column">
+    <form style="height: 500px;padding: 48px;" fxLayout="column" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div style="margin-bottom: 20px;" fxLayoutAlign="center">
         <img src="assets/img/logo.png" alt="" height="80px" width="auto">
       </div>
@@ -8,19 +8,26 @@
 
       <mat-form-field appearance="outline">
         <mat-label>Correo Electrónico</mat-label>
-        <input matInput type="email">
+        <input matInput type="email" formControlName="email">
+        <mat-error *ngIf="verificarError('email', 'required')">INGRESE SU EMAIL</mat-error>
+          <mat-error *ngIf="verificarError('email', 'email')">EMAIL INVÁLIDO</mat-error>
+          <mat-error *ngIf="verificarError('email', 'maxlength')">MÁXIMO 100 CARACTERES</mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Contraseña</mat-label>
-        <input matInput [type]="hide ? 'password' : 'text'">
+        <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
         <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide" type="button">
         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
         </button>
+        <mat-error *ngIf="verificarError('password', 'required')">INGRESE SU CONTRASEÑA</mat-error>
+          <mat-error *ngIf="verificarError('password', 'maxlength')">MÁXIMO 20 CARACTERES</mat-error>
       </mat-form-field>
+      <p align="center" style="color: red" *ngIf="loginError">Correo Electrónico y/o Contraseña incorrecto</p>
       <div style="margin-top: 20px;" fxLayoutAlign="space-between">
         <button mat-button color="primary" type="button" routerLink="/auth/signup">Crear tu cuenta</button>
-        <button mat-flat-button color="primary">Acceder</button>
+        <button mat-flat-button color="primary" [disabled]="loginForm.invalid">Acceder</button>
       </div>
+
     </form>
   </div>
 </div>
