--- a/src/app/components/categoria/categoria.component.html
+++ b/src/app/components/categoria/categoria.component.html
@@ -1,20 +1,20 @@
-<div style="width: var(--categoria-div-width);min-height: calc(100vh - 54px);background-color: red;">
-  <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
+<div style="width: var(--categoria-div-width);min-height: calc(100vh - 54px);">
+  <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" style="background-color: whitesmoke;">
     <!-- This is the tree node template for leaf nodes -->
-    <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
+    <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding (click)="prueba(node.name)">
       <!-- use a disabled button to provide padding for tree leaf -->
       <button mat-icon-button disabled></button>
-      {{node.name}}
+      <span class="mat-small">{{node.name}}</span>
     </mat-tree-node>
     <!-- This is the tree node template for expandable nodes -->
-    <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding>
+    <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding (click)="prueba(node.name)">
       <button mat-icon-button matTreeNodeToggle
               [attr.aria-label]="'Toggle ' + node.name">
         <mat-icon class="mat-icon-rtl-mirror">
           {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
         </mat-icon>
       </button>
-      {{node.name}}
+      <span>{{node.name}}</span>
     </mat-tree-node>
   </mat-tree>
 </div>
