--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -9,7 +9,9 @@
   >
     <mat-icon>menu</mat-icon>
   </button>
-  <a routerLink="/">MZstore</a>
+
+  <img src="assets/img/logo.jpg" alt="" height="40px" style="cursor: pointer;" (click)="redirectTo('/')">
+
   <span class="example-spacer"></span>
 <form style="margin-top: 13px;">
   <mat-form-field appearance="outline" style="color: white;">
