--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -1,12 +1,12 @@
 <div style="width: 100%;min-height: calc(100vh - 54px - var(--footer-div-height));" fxLayoutAlign="center center">
-  <div style="width: 800px;">
-    <mat-grid-list cols="3" rowHeight="1:1" gutterSize="54">
+  <div style="width: 550px;">
+    <mat-grid-list cols="2" rowHeight="1:1" gutterSize="54">
       <mat-grid-tile>
         <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px">
           <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
-            <mat-icon>library_add</mat-icon>
+            <mat-icon>edit</mat-icon>
           </button>
-          <p>Añadir Nuevo Artículo</p>
+          <p>Modificar mis Datos Personales</p>
         </div>
 
       </mat-grid-tile>
@@ -15,10 +15,10 @@
           <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
             <mat-icon>view_list</mat-icon>
           </button>
-          <p>Ver Todos los Artículos</p>
+          <p>Ver mis Pedidos</p>
         </div>
       </mat-grid-tile>
-      <mat-grid-tile>
+<!--       <mat-grid-tile>
         <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px">
           <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
             <mat-icon>local_shipping</mat-icon>
@@ -33,7 +33,7 @@
           </button>
           <p>Ver a Todos los Usuarios</p>
         </div>
-      </mat-grid-tile>
+      </mat-grid-tile> -->
     </mat-grid-list>
   </div>
 
