--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,5 +1,5 @@
 <div style="width: 100%;min-height: calc(100vh - 54px - var(--footer-div-height));" fxLayoutAlign="center center">
 
-
+<p>NO ENCONTRADO</p>
 </div>
 
