--- a/src/app/carrito/carrito.component.html
+++ b/src/app/carrito/carrito.component.html
@@ -1,5 +1,5 @@
-<div style="width: 100%;min-height: calc(100vh - 54px - var(--footer-div-height));" fxLayoutAlign="center center">
 
-
+<div fxLayoutAlign="start stretch" style="width: 100%;min-height: calc(100vh - 54px - var(--footer-div-height));background-color: pink;">
+  <p>hola mundo</p>
 </div>
 
