--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div style="width: 100%" fxLayout="row" fxLayoutAlign="center">
   <div style="width: 1500px" fxLayout="row" fxLayoutGap="24px">
-    <app-categoria></app-categoria>
+    <app-categories></app-categories>
     <div fxFlex="1 1 auto">
       <app-filtrar></app-filtrar>
       <mat-grid-list cols="4" rowHeight="500px" gutterSize="20px">
