--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,69 @@
-<!-- <h1>
-  {{title}}
-</h1>
-
-<button routerLink="/auth">Auth</button>
-<button routerLink="/admin">Admin</button>
-<button routerLink="">Home</button> -->
-<app-toolbar></app-toolbar>
+<!-- <app-toolbar></app-toolbar>
 <router-outlet></router-outlet>
-<app-footer></app-footer>
+<app-footer></app-footer> -->
+
+<div class="example-container">
+  <app-toolbar (menuClicked)="onMenuClicked($event)" [esAdmin]="esAdmin" [isAuthenticated]="isAuthenticated"></app-toolbar>
+
+  <mat-sidenav-container
+    class="example-sidenav-container"
+    [style.marginTop.px]="0"
+    hasBackdrop="true"
+  >
+    <mat-sidenav
+      #snav
+      mode="over"
+      [fixedInViewport]="true"
+      fixedTopGap="56"
+      autoFocus="false"
+    >
+      <!-- <mat-nav-list>
+        <a mat-list-item routerLink="." *ngFor="let nav of fillerNav">{{nav}}</a>
+      </mat-nav-list> -->
+      <app-categories (selectedOption)="onSelectedOption()"></app-categories>
+    </mat-sidenav>
+    <mat-sidenav
+      #snav2
+      mode="over"
+      position="end"
+      [fixedInViewport]="true"
+      fixedTopGap="56"
+      autoFocus="false"
+    >
+      <mat-card class="example-card mat-elevation-z0" *ngIf="isAuthenticated">
+        <mat-card-header>
+          <div mat-card-avatar>
+            <mat-icon style="font-size: 3rem" [style.color]="colorIcono"
+              >account_circle</mat-icon
+            >
+          </div>
+          <mat-card-title>{{
+            datosToken.data.nombre_completo.toUpperCase()
+          }}</mat-card-title>
+          <mat-card-subtitle>{{ datosToken.data.email }}</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-actions>
+          <mat-action-list>
+            <button mat-list-item (click)="login()">Ver mis Pedidos</button>
+            <button mat-list-item (click)="login()">
+              Modificar mis Datos Personales
+            </button>
+          </mat-action-list>
+        </mat-card-actions>
+        <mat-divider></mat-divider>
+        <mat-card-actions>
+          <button mat-button (click)="logout()">CERRAR SESIÓN</button>
+        </mat-card-actions>
+      </mat-card>
+    </mat-sidenav>
+
+    <mat-sidenav-content
+      style="width: 100%; min-height: calc(100vh - 54px)"
+      fxLayout="column"
+      fxLayoutAlign="space-between"
+    >
+      <router-outlet></router-outlet>
+      <app-footer></app-footer>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
