--- a/src/app/shared/categories/categories.component.html
+++ b/src/app/shared/categories/categories.component.html
@@ -1,10 +1,10 @@
-<div style="width: var(--categoria-div-width);min-height: calc(100vh - 54px);">
+<div style="width: var(--categoria-div-width);">
   <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" style="background-color: whitesmoke;">
     <!-- This is the tree node template for leaf nodes -->
     <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding (click)="prueba(node.name)">
       <!-- use a disabled button to provide padding for tree leaf -->
       <button mat-icon-button disabled></button>
-      <span class="mat-small">{{node.name}}</span>
+      <span class="mat-small" (click)="selectOption()">{{node.name}}</span>
     </mat-tree-node>
     <!-- This is the tree node template for expandable nodes -->
     <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding (click)="prueba(node.name)">
@@ -14,7 +14,7 @@
           {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
         </mat-icon>
       </button>
-      <span>{{node.name}}</span>
+      <span (click)="selectOption()">{{node.name}}</span>
     </mat-tree-node>
   </mat-tree>
 </div>
