--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-.example-container {
+.container {
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -8,27 +8,30 @@
   right: 0;
 }
 
-.example-is-mobile .example-toolbar {
+/* .is-mobile .toolbar {
   position: fixed;
-  /* Make sure the toolbar will stay on top of the content as it scrolls past. */
   z-index: 2;
-}
+} */
 
-h1.example-app-name {
+/* h1.app-name {
   margin-left: 8px;
-}
+} */
 
-.example-sidenav-container {
+.sidenav-container {
   /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
      causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
   flex: 1;
 }
 
-.example-card {
+.card {
   max-width: 250px;
 }
 
-.example-header-image {
+.header-image {
   background-image: url('https://toppng.com/uploads/preview/user-account-management-logo-user-icon-11562867145a56rus2zwu.png');
   background-size: cover;
+}
+
+.mat-card-header .mat-card-title {
+  font-size: 16px;
 }
