--- a/src/app/buscar/buscar.component.html
+++ b/src/app/buscar/buscar.component.html
@@ -9,7 +9,7 @@
             <mat-grid-list cols="1" rowHeight="1:1" gutterSize="0px">
               <mat-grid-tile rowspan="1">
                 <img
-                [src]="articulo.imagen"
+                [src]="urlImagenes + articulo.imagen"
                 alt=""
                 width="auto"
                 height="100%"
