--- a/src/app/admin/add-articulo/add-articulo.component.html
+++ b/src/app/admin/add-articulo/add-articulo.component.html
@@ -31,6 +31,7 @@
                   matInput
                   placeholder="Artículo"
                   formControlName="articulo"
+                  class="right-align"
                 />
                 <mat-hint>Nombre del artículo</mat-hint>
               </mat-form-field>
@@ -73,39 +74,27 @@
               <angular-editor
                 formControlName="descripcion"
                 [config]="editorConfig"
+                style="z-index: 99"
               >
               </angular-editor>
-              <!-- <mat-form-field appearance="fill" fxFlex="100%">
-                <mat-label>Descripción</mat-label>
-                <textarea
-                  matInput
-                  placeholder="Descripción"
-                  formControlName="descripcion"
-                  cdkTextareaAutosize
-                  #autosize="cdkTextareaAutosize"
-                  cdkAutosizeMinRows="7"
-                  cdkAutosizeMaxRows="10"
-                ></textarea>
-
-                <mat-hint>Descripción del artículo</mat-hint>
-              </mat-form-field> -->
-              <div style="width: 100%;">
+              <!-- <div style="width: 100%;">
                 <div [innerHtml]="descripcion | safeHtml"></div>
 
-              </div>
+              </div> -->
             </div>
           </div>
-
-          <div style="margin-top: 24px;" fxLayoutAlign="end">
-            <button mat-button color="primary" matStepperNext>Siguiente</button>
-          </div>
         </form>
+
+        <div style="height: 210px; background-color: transparent"></div>
+        <div style="margin-top: 24px" fxLayoutAlign="end">
+          <button mat-button color="primary" matStepperNext>Siguiente</button>
+        </div>
       </mat-step>
       <mat-step
         [stepControl]="imagenPrincipalForm"
         errorMessage="Adjunta al menos una imagen"
       >
-        <form [formGroup]="imagenPrincipalForm">
+        <form [formGroup]="imagenPrincipalForm" style="min-height: 300px">
           <ng-template matStepLabel>Imagenes</ng-template>
 
           <div
@@ -144,18 +133,17 @@
               />
             </div>
           </div>
-
-          <div fxLayoutAlign="end">
-            <button mat-button color="primary" matStepperPrevious>Atrás</button>
-            <button mat-button color="primary" matStepperNext>Siguiente</button>
-          </div>
         </form>
+        <div fxLayoutAlign="end">
+          <button mat-button color="primary" matStepperPrevious>Atrás</button>
+          <button mat-button color="primary" matStepperNext>Siguiente</button>
+        </div>
       </mat-step>
       <mat-step
         [stepControl]="categoriaForm"
         errorMessage="¡Verifica el formulario!"
       >
-        <form [formGroup]="categoriaForm">
+        <form [formGroup]="categoriaForm" style="min-height: 300px">
           <ng-template matStepLabel>Categoría</ng-template>
           <div
             style="width: 100%; margin-bottom: 24px"
@@ -169,6 +157,12 @@
                   *ngFor="let categoria of categorias"
                   [value]="categoria.id_categoria"
                   >{{ categoria.categoria }}</mat-option
+                >
+                <mat-option
+                  [value]="0"
+                  class="mat-body-strong"
+                  style="color: #3f51b5"
+                  >Agregar/Editar/Quitar</mat-option
                 >
               </mat-select>
               <mat-hint>Categoría a la que pertenece</mat-hint>
@@ -186,6 +180,12 @@
                   [value]="subcategoria.id_subcategoria"
                   >{{ subcategoria.subcategoria }}</mat-option
                 >
+                <mat-option
+                  [value]="0"
+                  class="mat-body-strong"
+                  style="color: #3f51b5"
+                  >Agregar/Editar/Quitar</mat-option
+                >
               </mat-select>
               <mat-hint>Subcategoría a la que pertenece</mat-hint>
               <!-- <mat-error *ngIf="categoriaForm.hasError('required')">You must make a selection</mat-error>
@@ -202,7 +202,12 @@
                   [value]="marca.id_marca"
                   >{{ marca.marca }}</mat-option
                 >
-                <mat-option value="otro" style="color: blue;">Otro</mat-option>
+                <mat-option
+                  [value]="0"
+                  class="mat-body-strong"
+                  style="color: #3f51b5"
+                  >Agregar/Editar/Quitar</mat-option
+                >
               </mat-select>
               <mat-hint>Marca del artículo</mat-hint>
               <!-- <mat-error *ngIf="categoriaForm.hasError('required')">You must make a selection</mat-error>
@@ -212,7 +217,6 @@
             </mat-form-field>
           </div>
         </form>
-
         <div fxLayoutAlign="end">
           <button mat-button color="primary" matStepperPrevious>Atrás</button>
           <button
